# local-photo-server

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
server/: config.json  create_user.cpp
web/: app.js  index.html  styles.css
